--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
 </head>
 <body>
     <h1>Mockingbird</h1>
-    <h4>by Eminem</h4>
+    <h4>Song by Eminem</h4>
+
+    <a href="https://music.youtube.com/watch?v=9kznlAwE-8o&list=RDAMVM9kznlAwE-8o">
+        <img src="mockingbird.jpg" alt="the art cover of the song"
+        height="200" style="border-radius: 5px;" title="Mockingbird By Eminem">
+    </a>
+    <br>
+    <a href="https://music.youtube.com/watch?v=9kznlAwE-8o&list=RDAMVM9kznlAwE-8o">
+        Open With Youtube Music
+    </a>
+    <hr>
+
     <pre> 
         Yeah
         I know sometimes
