Change heading to paragraph and update footer link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="mockingbird.jpg" alt="the art cover of the song"
         height="170" style="border-radius: 5px;" title="Mockingbird By Eminem" id="cover">
     </a>
-    <h1>Mockingbird</h1>
+    <p id="title">Mockingbird</p>
     <h3>Song by Eminem</h3>
 
     
@@ -122,8 +122,8 @@
 
     <footer>
         <a href="https://music.youtube.com/watch?v=9kznlAwE-8o&list=RDAMVM9kznlAwE-8o">
-        Open With Youtube Music
-    </a>
+            <p id="fter">Open With Youtube Music</p>
+        </a>
     </footer>
 </body>
 </html>
