--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
     <title>My Favorite Music's Lyrics</title>
     <link rel="icon" type="image/jpg" href="mockingbird.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <a href="https://music.youtube.com/watch?v=9kznlAwE-8o&list=RDAMVM9kznlAwE-8o" target="_blank">
@@ -124,6 +127,18 @@
         <a href="https://music.youtube.com/watch?v=9kznlAwE-8o&list=RDAMVM9kznlAwE-8o">
             <p id="fter">Open With Youtube Music</p>
         </a>
+
+        <div class="box1">
+            <img id="eminem" src="eminem.png" alt="Eminem">
+            <h2> 🎤 Eminem (Marshall Bruce Mathers III)</h2>
+            <p id="about">
+Eminem, whose real name is Marshall Bruce Mathers III, was born on October 17, 1972 in Missouri, USA. He is considered one of the most famous and influential rappers in the history of hip-hop.
+
+Eminem had a difficult childhood, and these experiences are clearly felt in his music. His songs often reflect personal life, social problems, poverty, struggle and inner feelings.
+
+In 1999, the album “The Slim Shady LP” became famous worldwide. Later, he achieved great success with albums such as “The Marshall Mathers LP”, “The Eminem Show”, “Recovery”, “Kamikaze” and “Music To Be Murdered By”.
+            </p>
+        </div>
     </footer>
 </body>
 </html>
