Add pagination links in the footer
Added pagination links to the footer section.

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </pre>
 
     <footer>
-        <a href="https://music.youtube.com/watch?v=9kznlAwE-8o&list=RDAMVM9kznlAwE-8o">
+        <a href="https://music.youtube.com/watch?v=9kznlAwE-8o&list=RDAMVM9kznlAwE-8o" id="a-link">
             <p id="fter">Open With Youtube Music</p>
         </a>
 
@@ -138,6 +138,14 @@ Eminem had a difficult childhood, and these experiences are clearly felt in his 
 
 In 1999, the album “The Slim Shady LP” became famous worldwide. Later, he achieved great success with albums such as “The Marshall Mathers LP”, “The Eminem Show”, “Recovery”, “Kamikaze” and “Music To Be Murdered By”.
             </p>
+        </div>
+
+        <div class="pagination">
+            <a href=""><</a>
+            <a href="index.html" id="active">1</a>
+            <a href="page2.html">2</a>
+            <a href="">3</a>
+            <a href="page2.html">></a>
         </div>
     </footer>
 </body>
